--- a/index.html
+++ b/index.html
@@ -24,8 +24,19 @@
     </div>
 
     <script src="script.js"></script>
-
-    
+<script>
+    if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then((registration) => {
+        console.log('Service Worker Registered', registration);
+      })
+      .catch((error) => {
+        console.log('Service Worker Registration Failed', error);
+      });
+  });
+}
+        </script> 
 
 </body>
 </html>
